--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@
     border-radius: 50%;
     position: absolute;
     top: -5vh;
+    z-index: 1000;
 }
 
 @keyframes snowfall {
@@ -18,7 +19,7 @@
 
     100% {
         // transform: translate3d(var(--left-end), 110vh, 0);
-        transform: translate3d(var(--left-end), 1500px, 0);
+        transform: translate3d(var(--left-end), 2000px, 0);
     }
 }
 
